RESOLVED FIXED299955
[macOS Safari] Local and outgoing shared screen is not adjusted to the full screen when User resizes the shared window
https://bugs.webkit.org/show_bug.cgi?id=299955
Summary [macOS Safari] Local and outgoing shared screen is not adjusted to the full s...
viktorija.kuluka
Reported 2025-10-01 08:00:07 PDT
Created attachment 476921 [details] Sysdiagnose file collected at 17:42:04, 2025.10.01, UTC+3 time zone Summary: [macOS Safari] Local and outgoing shared screen is not adjusted to the full screen when user resizes the shared window Tested devices and browsers: Bug is reproducible on: - MacBook Pro (M1, 2020, macOS 26.0) and Safari 26.0 (21622.1.22.11.14) - MacBook Pro (M1, 2020, macOS 15.6.1) and Safari 18.6 (20621.3.11.11.3) - MacBook Pro (M1, 2020, macOS 14.6.1) and Safari 17.6 (19618.3.11.11.5) Bug is NOT reproducible on: - MacBook Pro (M1, 2020, macOS 26.0) and Google Chrome (141.0.7390.55) - MacBook Pro (M1, 2020, macOS 15.6.1) and Google Chrome (139.0.7258.155) - Lenovo ThinkPad E495 (Windows 11 Enterprise) and MS Edge (139.0.3405.125) Use case: Precondition: Remote User is in an active WebRTC call Steps: 1. User joins a call 2. User clicks "Start screen sharing" and chooses the "Share Window" option 3. User resizes the shared window 4. User observes the local screen sharing preview and Remote User observes incoming screen share Actual result: Local and outgoing shared screen video streams do NOT automatically resize to fill the entire video container when User resizes the shared window Expected result: Local and outgoing shared screen video streams automatically resize to fill the entire video container when User resizes the shared window Reproducibility: 100% Reproducibility with other services: Bug is reproducible with WebRTC sample (https://webrtc.github.io/samples/src/content/getusermedia/getdisplaymedia/) Bug is reproducible with teams.microsoft.com - only on Safari Bug is NOT reproducible with Teams Desktop app Bug is NOT reproducible with Google Meets Additional information: Sysdiagnostics file added (reproduced at 17:42:04, 2025.10.01, UTC+3 time zone): sysdiagnose_2025.10.01_17-42-04+0300_macOS_Mac_25A362.tar.gz
Attachments
Sysdiagnose file collected at 17:42:04, 2025.10.01, UTC+3 time zone (363.02 MB, application/x-gzip)
2025-10-01 08:00 PDT, viktorija.kuluka
no flags
Screen recording of the issue (5.65 MB, image/gif)
2025-10-01 08:01 PDT, viktorija.kuluka
no flags
viktorija.kuluka
Comment 1 2025-10-01 08:01:53 PDT
Created attachment 476922 [details] Screen recording of the issue
Radar WebKit Bug Importer
Comment 2 2025-10-01 08:15:54 PDT
youenn fablet
Comment 3 2025-10-10 02:55:20 PDT
EWS
Comment 4 2025-10-14 07:54:52 PDT
Committed 301477@main (f2be77ec4f12): <https://commits.webkit.org/301477@main> Reviewed commits have been landed. Closing PR #52112 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.