[macOS Safari] Local and outgoing shared screen is not adjusted to the full screen when User resizes the shared window rdar://161736839 https://bugs.webkit.org/show_bug.cgi?id=299955

Reviewed by Eric Carlson.

The offsets need to be computed based on the input buffer to get proper cropping.
We update ImageTransferSessionVT::setCroppingRectangle to take the intrinsic size as input to compute the proper offsets.
We update ScreenCaptureKitCaptureSource call site.

Manually tested.

* Source/WebCore/platform/graphics/cv/ImageTransferSessionVT.h:
(WebCore::ImageTransferSessionVT::setCroppingRectangle):
* Source/WebCore/platform/graphics/cv/ImageTransferSessionVT.mm:
(WebCore::ImageTransferSessionVT::setCroppingRectangle):
* Source/WebCore/platform/mediastream/mac/ScreenCaptureKitCaptureSource.mm:
(WebCore::ScreenCaptureKitCaptureSource::streamDidOutputVideoSampleBuffer):

Canonical link: https://commits.webkit.org/301477@main